// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for /bengali/articles/c6p3yp5zzmeo For the AMP platform I can see the server-rendered HTML 1`] = `
<html lang="bn"
      dir="ltr"
      amp
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          name="description"
          content="ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা?"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা?"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/bengali.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="bn-BD"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা? - BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/bengali/articles/c6p3yp5zzmeo"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbcbangla"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা?"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/bengali.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbcbangla"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা? - BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2019-07-12T14:40:11.695Z"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2019-07-12T14:40:11.695Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <link rel="preconnect"
          href="https://gel.files.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://gel.files.bbci.co.uk"
    >
    <link rel="preconnect"
          href="https://ws-downloads.files.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ws-downloads.files.bbci.co.uk"
    >
    <title data-react-helmet="true">
      ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা? - BBC News বাংলা
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/bengali/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/bengali/articles/c6p3yp5zzmeo"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/bengali/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/bengali/articles/c6p3yp5zzmeo","publisher":{"@type":"NewsMediaOrganization","name":"BBC News বাংলা","publishingPrinciples":"https://www.bbc.com/bengali/institutional-50409861","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/bengali.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/bengali.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/bengali.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/bengali/articles/c6p3yp5zzmeo","name":"ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা?"},"headline":"ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা?","datePublished":"2019-07-12T14:40:11.695Z","dateModified":"2019-07-12T14:40:11.695Z","author":{"@type":"NewsMediaOrganization","name":"BBC News বাংলা","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/bengali.png"},"noBylinesPolicy":"https://www.bbc.com/bengali/institutional-50409861#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Test asset with square image","description":"test asset","duration":"PT16S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p019qd93.jpg","uploadDate":"2017-04-27T11:44:53.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/articles/c6p3yp5zzmeo/p019qd7k/bn/amp"}
    </script>
    <script data-react-helmet="true"
            async
            custom-element="amp-iframe"
            src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    >
    </script>
    <style amp-boilerplate>
      body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
    </style>
    <noscript>
      <style amp-boilerplate>
        body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
      </style>
    </noscript>
    <script async
            src="https://cdn.ampproject.org/v0.js"
    >
    </script>
    <script async
            custom-element="amp-geo"
            src="https://cdn.ampproject.org/v0/amp-geo-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-consent"
            src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-analytics"
            src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    >
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="AmpConsentWrapper-sc-18egs7-0 bfTTJR">
          <amp-geo layout="nodisplay">
            <script type="application/json">
              {"ISOCountryGroups":{"eea":["at","ax","be","bg","bl","cy","cz","de","dk","ea","ee","es","fi","fr","gb","gf","gg","gi","gp","gr","hr","hu","ic","ie","im","is","it","je","li","lt","lu","lv","mf","mq","mt","nc","nl","no","pf","pl","pm","pt","re","ro","se","si","sj","sk","tf","va","wf","yt"]}}
            </script>
          </amp-geo>
          <amp-consent id="consent"
                       layout="nodisplay"
          >
            <script type="application/json">
              {"consents":{"user-consent":{"promptIfUnknownForGeoGroup":"eea","promptUI":"consent-prompt"}}}
            </script>
            <div id="consent-prompt">
              <div dir="ltr"
                   id="privacy"
                   class="Wrapper-sc-7g3fro-0 cOdcPH"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 dwinOQ"
                  >
                    আমরা আমাদের প্রিভেসি এবং কুকি বিষয়ক নীতিমালা আপডেট করেছি।
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 iyAQfQ"
                  >
                    আমাদের প্রিভেসি এবং কুকি নীতিমালায় আমরা কিছু গুরুত্বপূর্ণ পরিবর্তন এনেছি।  আপনার এবং আপনার ব্যবহৃত ডেটার জন্য এই পরিবর্তনের অর্থ কী সেটা আমরা আপনাকে জানাতে চাই।
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 gSqVEs"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 kWfiNQ"
                    >
                      <button type="button"
                              on="tap:cookie.show, privacy.hide"
                      >
                        ঠিক আছে।
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 kWfiNQ"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
                         on="tap:cookie.show, privacy.hide"
                      >
                        কী পরিবর্তন হয়েছে দেখুন।
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div dir="ltr"
                   hidden
                   id="cookie"
                   class="Wrapper-sc-7g3fro-0 cOdcPH"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 dwinOQ"
                  >
                    আপনি কুকিগুলো ব্যবহারের সম্মতি দিচ্ছেন সেটা আমাদের জানান।
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 iyAQfQ"
                  >
                    আমরা
                    <a href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/">
                      কুকি
                    </a>
                    ব্যবহার করি যাতে অনলাইনে আপনার বিচরণ স্বচ্ছন্দ হয়।সবগুলো কুকি ব্যবহারের জন্য আপনি সম্মতি দিচ্ছেন কিনা জানান।
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 gSqVEs"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 kWfiNQ"
                    >
                      <button type="button"
                              on="tap:consent.accept"
                              data-cookie-banner="accept"
                      >
                        হ্যাঁ, আমি সম্মতি দিচ্ছি।
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 kWfiNQ"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                         on="tap:consent.reject"
                         data-cookie-banner="reject"
                      >
                        না, আমাকে সেটিং-এ ফেরত নিয়ে যান।
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </amp-consent>
        </div>
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/bengali"
               class="StyledLink-m3awbo-2 hxhVJi"
            >
              <svg height="24"
                   viewbox="0 0 227.94 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 fCwdWu"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M196.8 4.94h-1v1.47a7.51 7.51 0 0 0 .07 1.07 2.46 2.46 0 0 0-.8-.91 1.81 1.81 0 0 0-.93-.32H182v1.4h8.55v.65a32.69 32.69 0 0 0-3.73 1.45 42.48 42.48 0 0 0-3.9 2l.77 1.89a9.79 9.79 0 0 1 4.07 1.66 8.78 8.78 0 0 1 2.79 3.12H192V7.64h1.83a1.67 1.67 0 0 1 1.13.42 2.77 2.77 0 0 1 .76 1.19v9.22h1.51V7.64h2.06v-1.4h-2.08zm-8.61 9a10.89 10.89 0 0 0-3.47-1.47 28.21 28.21 0 0 1 2.74-1.43q1.45-.66 3.06-1.22v4.91q0 .8.07 1.59a7.45 7.45 0 0 0-2.4-2.32zM203.63 11.6a2.72 2.72 0 0 0 2-.77 2.57 2.57 0 0 0 .79-1.92 2.54 2.54 0 0 0-.8-1.91 2.92 2.92 0 0 0-3.95 0 2.57 2.57 0 0 0-.79 1.91 2.57 2.57 0 0 0 .79 1.92 2.72 2.72 0 0 0 1.96.77zm-1-3.7a1.42 1.42 0 0 1 2.44 1 1.36 1.36 0 0 1-.41 1 1.49 1.49 0 0 1-2 0 1.47 1.47 0 0 1 0-2zM201.74 12.29l-1 1.28a15.62 15.62 0 0 1 3 2.28 21.5 21.5 0 0 1 2.67 3.43l1.29-.65A18.94 18.94 0 0 0 205 15a15.76 15.76 0 0 0-3.26-2.71zM225.86 6.24l-.44-1.3h-1v1.47a7.51 7.51 0 0 0 .07 1.07 2.46 2.46 0 0 0-.8-.91 1.81 1.81 0 0 0-.93-.32h-14.83v1.4h11.21v2.84a4.24 4.24 0 0 0-1.11-.7 2.9 2.9 0 0 0-1-.18 2.17 2.17 0 0 0-1.08.28 1.81 1.81 0 0 0-.75.78 3.85 3.85 0 0 0-1.31-1 3.93 3.93 0 0 0-1.67-.33 3.29 3.29 0 0 0-2.27.81 2.63 2.63 0 0 0-.91 2.06 3.44 3.44 0 0 0 .84 2.3 5.2 5.2 0 0 0 2.46 1.5l.53-1.45a4.35 4.35 0 0 1-1.67-1 1.82 1.82 0 0 1-.56-1.32 1.42 1.42 0 0 1 .47-1.1 1.74 1.74 0 0 1 1.22-.43 2.17 2.17 0 0 1 1.59.68 3 3 0 0 1 .81 1.83l1.28-.09a5 5 0 0 1 0-.71 1.56 1.56 0 0 1 .33-1.07 1.25 1.25 0 0 1 1-.37 1.67 1.67 0 0 1 .94.29 4 4 0 0 1 .94 1v6.22h1.51V7.64h1.83a1.67 1.67 0 0 1 1.13.42 2.77 2.77 0 0 1 .76 1.19v9.22h1.51V7.64h2.06v-1.4z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                বাংলা
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 hiJaEK"
            >
              সরাসরি কনটেন্টে যান
            </a>
          </div>
        </div>
      </header>
      <amp-analytics>
        <script type="application/json">
          {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"base":"https://logws1363.ati-host.net?","pageview":"\${base}s=598343&s2=31&p=bengali.articles.c6p3yp5zzmeo.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:optimo:c6p3yp5zzmeo]&x2=[amp]&x3=[news-bengali]&x4=[bn]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[article]&x8=[simorgh]&x9=[ক্রিকেট+বিশ্বকাপ+২০১৯:+ম্যান+অফ+দা+টুর্নামেন্টের+দৌড়ে+এগিয়ে+কারা?]&x11=[2019-07-12T14:40:11.695Z]&x12=[2019-07-12T14:40:11.695Z]"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
        </script>
      </amp-analytics>
      <amp-analytics type="chartbeat">
        <script type="application/json">
          {"vars":{"domain":"test.bbc.co.uk","sections":"Bengali, Bengali - ART","uid":50924,"title":"ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা?","virtualReferrer":"\${documentReferrer}","contentType":"New Article"}}
        </script>
      </amp-analytics>
      <main role="main"
            class="StyledMain-sc-1onvfv8-0 hAQCOp"
      >
        <div class="GridWrapper-sc-12lwanc-0 hgpaqH">
          <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
            <h1 id="content"
                tabindex="-1"
                class="Headline-sc-1kh1qhu-0 StyledHeadline-sc-1ffcmag-0 hNKIvJ"
            >
              এটি এই পরীক্ষার নিবন্ধটির শিরোনাম
            </h1>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <amp-img alt="এই পরীক্ষার চিত্র, কপিরাইট বিবিসি, ফ্রান্সের মানচিত্র দেখায়। চিত্রটি প্রথম তিনটি ব্লকের মধ্যে রয়েছে এবং এতে ক্যাপশন রয়েছে।"
                             attribution
                             layout="responsive"
                             src="https://ichef.bbci.co.uk/news/640/cpsdevpb/b06e/test/d8141e90-fcb8-11e9-9afe-1371928331c5.jpg"
                             height="351"
                             width="624"
                    >
                    </amp-img>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                  <figcaption class="Caption-sc-16x70so-0 jClRdi">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      ছবির ক্যাপশান,
                    </span>
                    <p>
                      এই পরীক্ষার চিত্র, কপিরাইট বিবিসি, ফ্রান্সের মানচিত্র দেখায়। চিত্রটি প্রথম তিনটি ব্লকের মধ্যে রয়েছে এবং এতে ক্যাপশন রয়েছে।
                    </p>
                  </figcaption>
                </div>
              </div>
            </figure>
          </div>
          <div class="PopOutAtGroup5-sc-12lwanc-13 fvtaWN">
            <time datetime="2019-07-12"
                  class="StyledTimestamp-um718p-0 kdCwhz"
            >
              ১২ জুলাই ২০১৯
            </time>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 RXHgt">
              এটি একটি পাঠ্য ব্লক, এতে বিবিসি আবহাওয়ার হোমপেজে একটি ইউআরএল
              <a href="https://www.bbc.co.uk/weather"
                 class="InlineLink-hkwpaz-0 idscKS"
              >
                লিঙ্ক রয়েছে।
              </a>
            </p>
          </div>
          <div class="GridItemConstrainedMediumNoMargin-sc-12lwanc-3 ijtfss">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
                <amp-iframe sandbox="allow-scripts allow-same-origin"
                            layout="fill"
                            scrolling="no"
                            frameborder="0"
                            src="https://polling.test.bbc.co.uk/ws/av-embeds/articles/c6p3yp5zzmeo/p019qd7k/bn/amp"
                            title="মিডিয়া প্লেয়ার"
                            allowfullscreen="allowfullscreen"
                >
                  <amp-img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p019qd93.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p019qd93.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p019qd93.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p019qd93.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p019qd93.jpg 800w"
                           layout="fill"
                           src="https://ichef.test.bbci.co.uk/images/ic/512xn/p019qd93.jpg"
                           placeholder="true"
                           alt
                           height="16"
                           width="9"
                           attribution
                  >
                  </amp-img>
                  <noscript>
                    <div class="StyledWrapper-sc-1pnftlt-0 jywlaE">
                      <img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p019qd93.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p019qd93.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p019qd93.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p019qd93.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p019qd93.jpg 800w"
                           alt
                           src="https://ichef.test.bbci.co.uk/images/ic/512xn/p019qd93.jpg"
                           aria-hidden="true"
                           class="StyledImg-sc-7vx2mr-0 hIxkbt"
                      >
                      <div class="MessageWrapper-sc-1pnftlt-1 krCfBg">
                        <strong class="StyledMessage-sc-1pnftlt-2 iRlUPR">
                          আপনার ডিভাইস মিডিয়া প্লেব্যাক সমর্থন করে না
                        </strong>
                      </div>
                    </div>
                  </noscript>
                </amp-iframe>
              </div>
              <figcaption class="Caption-sc-16x70so-0 jClRdi">
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  ভিডিওর ক্যাপশান,
                </span>
                <p>
                  এটি একটি ভিডিওযুক্ত একটি ভিডিও ব্লক
                </p>
              </figcaption>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <h2 id="-এটি-একটি-সাবহেডলাইন-ব্লক"
                tabindex="-1"
                class="SubHeading-sc-1kh1qhu-1 gnHsFb"
            >
              এটি একটি সাবহেডলাইন ব্লক
            </h2>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <amp-img alt="
এটি একটি সাবহেডলাইন ব্লক"
                             attribution="Getty Images"
                             layout="responsive"
                             src="https://ichef.bbci.co.uk/news/640/cpsdevpb/baed/test/3c2cf780-fcb9-11e9-9afe-1371928331c5.jpg"
                             height="450"
                             width="800"
                    >
                    </amp-img>
                    <p role="text"
                       class="Copyright-sc-11lgtw-0 hDvIfz"
                    >
                      <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                        ছবির উৎস,
                      </span>
                      <span lang="en-GB">
                        Getty Images
                      </span>
                    </p>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                </div>
              </div>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 RXHgt">
              এই পরীক্ষার নিবন্ধটি তৈরি করা হয়েছে যাতে আমরা আমাদের ওয়েবসাইটে পরীক্ষা চালাতে পারি।
            </p>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/bengali"
               class="StyledLink-m3awbo-2 hxhVJi"
            >
              <svg height="24"
                   viewbox="0 0 227.94 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 fCwdWu"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M196.8 4.94h-1v1.47a7.51 7.51 0 0 0 .07 1.07 2.46 2.46 0 0 0-.8-.91 1.81 1.81 0 0 0-.93-.32H182v1.4h8.55v.65a32.69 32.69 0 0 0-3.73 1.45 42.48 42.48 0 0 0-3.9 2l.77 1.89a9.79 9.79 0 0 1 4.07 1.66 8.78 8.78 0 0 1 2.79 3.12H192V7.64h1.83a1.67 1.67 0 0 1 1.13.42 2.77 2.77 0 0 1 .76 1.19v9.22h1.51V7.64h2.06v-1.4h-2.08zm-8.61 9a10.89 10.89 0 0 0-3.47-1.47 28.21 28.21 0 0 1 2.74-1.43q1.45-.66 3.06-1.22v4.91q0 .8.07 1.59a7.45 7.45 0 0 0-2.4-2.32zM203.63 11.6a2.72 2.72 0 0 0 2-.77 2.57 2.57 0 0 0 .79-1.92 2.54 2.54 0 0 0-.8-1.91 2.92 2.92 0 0 0-3.95 0 2.57 2.57 0 0 0-.79 1.91 2.57 2.57 0 0 0 .79 1.92 2.72 2.72 0 0 0 1.96.77zm-1-3.7a1.42 1.42 0 0 1 2.44 1 1.36 1.36 0 0 1-.41 1 1.49 1.49 0 0 1-2 0 1.47 1.47 0 0 1 0-2zM201.74 12.29l-1 1.28a15.62 15.62 0 0 1 3 2.28 21.5 21.5 0 0 1 2.67 3.43l1.29-.65A18.94 18.94 0 0 0 205 15a15.76 15.76 0 0 0-3.26-2.71zM225.86 6.24l-.44-1.3h-1v1.47a7.51 7.51 0 0 0 .07 1.07 2.46 2.46 0 0 0-.8-.91 1.81 1.81 0 0 0-.93-.32h-14.83v1.4h11.21v2.84a4.24 4.24 0 0 0-1.11-.7 2.9 2.9 0 0 0-1-.18 2.17 2.17 0 0 0-1.08.28 1.81 1.81 0 0 0-.75.78 3.85 3.85 0 0 0-1.31-1 3.93 3.93 0 0 0-1.67-.33 3.29 3.29 0 0 0-2.27.81 2.63 2.63 0 0 0-.91 2.06 3.44 3.44 0 0 0 .84 2.3 5.2 5.2 0 0 0 2.46 1.5l.53-1.45a4.35 4.35 0 0 1-1.67-1 1.82 1.82 0 0 1-.56-1.32 1.42 1.42 0 0 1 .47-1.1 1.74 1.74 0 0 1 1.22-.43 2.17 2.17 0 0 1 1.59.68 3 3 0 0 1 .81 1.83l1.28-.09a5 5 0 0 1 0-.71 1.56 1.56 0 0 1 .33-1.07 1.25 1.25 0 0 1 1-.37 1.67 1.67 0 0 1 .94.29 4 4 0 0 1 .94 1v6.22h1.51V7.64h1.83a1.67 1.67 0 0 1 1.13.42 2.77 2.77 0 0 1 .76 1.19v9.22h1.51V7.64h2.06v-1.4z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                বাংলা
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 idqvVi">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 gRKcvt"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/bengali/institutional-50409861"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    বিবিসির ওপর কেন আপনি আস্থা রাখতে পারেন
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/bengali/institutional-37289190"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ব্যবহারের শর্তাবলী
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/bengali/institutional-37289764"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    বিবিসি সম্পর্কে
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/bengali/institutional-37289766"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    প্রিভেসি নীতি
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/bengali/institutional-37289967"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    কুকিজ
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/contact/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    বিবিসির সঙ্গে যোগাযোগ করুন
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 বিবিসি। বাইরের কোন সাইটের তথ্যের জন্য বিবিসি দায়বদ্ধ নয়।
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  বাইরের লিংক সম্পর্কে বিবিসির দৃষ্টিভঙ্গি সম্বন্ধে পড়ুন।
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
  </body>
</html>
`;

exports[`Snapshot test for /bengali/articles/c6p3yp5zzmeo For the Canonical platform I can see the server-rendered HTML 1`] = `
<html lang="bn"
      class="no-js"
      dir="ltr"
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          name="description"
          content="ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা?"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা?"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/bengali.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="bn-BD"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা? - BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/bengali/articles/c6p3yp5zzmeo"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbcbangla"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা?"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/bengali.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbcbangla"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা? - BBC News বাংলা"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2019-07-12T14:40:11.695Z"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2019-07-12T14:40:11.695Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <link rel="preconnect"
          href="https://gel.files.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://gel.files.bbci.co.uk"
    >
    <link rel="preconnect"
          href="https://ws-downloads.files.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ws-downloads.files.bbci.co.uk"
    >
    <title data-react-helmet="true">
      ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা? - BBC News বাংলা
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/bengali/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/bengali/articles/c6p3yp5zzmeo"
    >
    <link data-react-helmet="true"
          rel="amphtml"
          href="http://localhost:7080/bengali/articles/c6p3yp5zzmeo.amp"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/bengali/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/bengali/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/bengali/articles/c6p3yp5zzmeo","publisher":{"@type":"NewsMediaOrganization","name":"BBC News বাংলা","publishingPrinciples":"https://www.bbc.com/bengali/institutional-50409861","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/bengali.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/bengali.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/bengali.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/bengali/articles/c6p3yp5zzmeo","name":"ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা?"},"headline":"ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা?","datePublished":"2019-07-12T14:40:11.695Z","dateModified":"2019-07-12T14:40:11.695Z","author":{"@type":"NewsMediaOrganization","name":"BBC News বাংলা","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/bengali.png"},"noBylinesPolicy":"https://www.bbc.com/bengali/institutional-50409861#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Test asset with square image","description":"test asset","duration":"PT16S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p019qd93.jpg","uploadDate":"2017-04-27T11:44:53.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/articles/c6p3yp5zzmeo/p019qd7k/bn"}
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/bengali"
               class="StyledLink-m3awbo-2 hxhVJi"
            >
              <svg height="24"
                   viewbox="0 0 227.94 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 fCwdWu"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M196.8 4.94h-1v1.47a7.51 7.51 0 0 0 .07 1.07 2.46 2.46 0 0 0-.8-.91 1.81 1.81 0 0 0-.93-.32H182v1.4h8.55v.65a32.69 32.69 0 0 0-3.73 1.45 42.48 42.48 0 0 0-3.9 2l.77 1.89a9.79 9.79 0 0 1 4.07 1.66 8.78 8.78 0 0 1 2.79 3.12H192V7.64h1.83a1.67 1.67 0 0 1 1.13.42 2.77 2.77 0 0 1 .76 1.19v9.22h1.51V7.64h2.06v-1.4h-2.08zm-8.61 9a10.89 10.89 0 0 0-3.47-1.47 28.21 28.21 0 0 1 2.74-1.43q1.45-.66 3.06-1.22v4.91q0 .8.07 1.59a7.45 7.45 0 0 0-2.4-2.32zM203.63 11.6a2.72 2.72 0 0 0 2-.77 2.57 2.57 0 0 0 .79-1.92 2.54 2.54 0 0 0-.8-1.91 2.92 2.92 0 0 0-3.95 0 2.57 2.57 0 0 0-.79 1.91 2.57 2.57 0 0 0 .79 1.92 2.72 2.72 0 0 0 1.96.77zm-1-3.7a1.42 1.42 0 0 1 2.44 1 1.36 1.36 0 0 1-.41 1 1.49 1.49 0 0 1-2 0 1.47 1.47 0 0 1 0-2zM201.74 12.29l-1 1.28a15.62 15.62 0 0 1 3 2.28 21.5 21.5 0 0 1 2.67 3.43l1.29-.65A18.94 18.94 0 0 0 205 15a15.76 15.76 0 0 0-3.26-2.71zM225.86 6.24l-.44-1.3h-1v1.47a7.51 7.51 0 0 0 .07 1.07 2.46 2.46 0 0 0-.8-.91 1.81 1.81 0 0 0-.93-.32h-14.83v1.4h11.21v2.84a4.24 4.24 0 0 0-1.11-.7 2.9 2.9 0 0 0-1-.18 2.17 2.17 0 0 0-1.08.28 1.81 1.81 0 0 0-.75.78 3.85 3.85 0 0 0-1.31-1 3.93 3.93 0 0 0-1.67-.33 3.29 3.29 0 0 0-2.27.81 2.63 2.63 0 0 0-.91 2.06 3.44 3.44 0 0 0 .84 2.3 5.2 5.2 0 0 0 2.46 1.5l.53-1.45a4.35 4.35 0 0 1-1.67-1 1.82 1.82 0 0 1-.56-1.32 1.42 1.42 0 0 1 .47-1.1 1.74 1.74 0 0 1 1.22-.43 2.17 2.17 0 0 1 1.59.68 3 3 0 0 1 .81 1.83l1.28-.09a5 5 0 0 1 0-.71 1.56 1.56 0 0 1 .33-1.07 1.25 1.25 0 0 1 1-.37 1.67 1.67 0 0 1 .94.29 4 4 0 0 1 .94 1v6.22h1.51V7.64h1.83a1.67 1.67 0 0 1 1.13.42 2.77 2.77 0 0 1 .76 1.19v9.22h1.51V7.64h2.06v-1.4z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                বাংলা
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 hiJaEK"
            >
              সরাসরি কনটেন্টে যান
            </a>
          </div>
        </div>
      </header>
      <noscript>
        <img height="1px"
             width="1px"
             alt
             style="position:absolute"
             src="https://logws1363.ati-host.net?s=598343&amp;s2=31&amp;p=bengali.articles.c6p3yp5zzmeo.page&amp;x1=[urn:bbc:optimo:c6p3yp5zzmeo]&amp;x2=[responsive]&amp;x3=[news-bengali]&amp;x4=[bn]&amp;x7=[article]&amp;x8=[simorgh-nojs]&amp;x9=[ক্রিকেট+বিশ্বকাপ+২০১৯:+ম্যান+অফ+দা+টুর্নামেন্টের+দৌড়ে+এগিয়ে+কারা?]&amp;x11=[2019-07-12T14:40:11.695Z]&amp;x12=[2019-07-12T14:40:11.695Z]"
        >
      </noscript>
      <main role="main"
            class="StyledMain-sc-1onvfv8-0 hAQCOp"
      >
        <div class="GridWrapper-sc-12lwanc-0 hgpaqH">
          <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
            <h1 id="content"
                tabindex="-1"
                class="Headline-sc-1kh1qhu-0 StyledHeadline-sc-1ffcmag-0 hNKIvJ"
            >
              এটি এই পরীক্ষার নিবন্ধটির শিরোনাম
            </h1>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <img srcset="https://ichef.bbci.co.uk/news/240/cpsdevpb/b06e/test/d8141e90-fcb8-11e9-9afe-1371928331c5.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsdevpb/b06e/test/d8141e90-fcb8-11e9-9afe-1371928331c5.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsdevpb/b06e/test/d8141e90-fcb8-11e9-9afe-1371928331c5.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsdevpb/b06e/test/d8141e90-fcb8-11e9-9afe-1371928331c5.jpg 624w"
                         alt="এই পরীক্ষার চিত্র, কপিরাইট বিবিসি, ফ্রান্সের মানচিত্র দেখায়। চিত্রটি প্রথম তিনটি ব্লকের মধ্যে রয়েছে এবং এতে ক্যাপশন রয়েছে।"
                         src="https://ichef.bbci.co.uk/news/640/cpsdevpb/b06e/test/d8141e90-fcb8-11e9-9afe-1371928331c5.jpg"
                         width="624"
                         class="StyledImg-sc-7vx2mr-0 dQLeqZ"
                    >
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                  <figcaption class="Caption-sc-16x70so-0 jClRdi">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      ছবির ক্যাপশান,
                    </span>
                    <p>
                      এই পরীক্ষার চিত্র, কপিরাইট বিবিসি, ফ্রান্সের মানচিত্র দেখায়। চিত্রটি প্রথম তিনটি ব্লকের মধ্যে রয়েছে এবং এতে ক্যাপশন রয়েছে।
                    </p>
                  </figcaption>
                </div>
              </div>
            </figure>
          </div>
          <div class="PopOutAtGroup5-sc-12lwanc-13 fvtaWN">
            <time datetime="2019-07-12"
                  class="StyledTimestamp-um718p-0 kdCwhz"
            >
              ১২ জুলাই ২০১৯
            </time>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 RXHgt">
              এটি একটি পাঠ্য ব্লক, এতে বিবিসি আবহাওয়ার হোমপেজে একটি ইউআরএল
              <a href="https://www.bbc.co.uk/weather"
                 class="InlineLink-hkwpaz-0 idscKS"
              >
                লিঙ্ক রয়েছে।
              </a>
            </p>
          </div>
          <div class="GridItemConstrainedMediumNoMargin-sc-12lwanc-3 ijtfss">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
                <div class="StyledPlaceholder-sc-11nyhtu-0 dDNqOp">
                  <div class="GuidanceWrapper-sc-1wm6qsk-0 lhwAsf">
                    <noscript class="StyledNoScript-sc-1wm6qsk-2 fsOOOd">
                      <strong class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO">
                        আপনার ডিভাইস মিডিয়া প্লেব্যাক সমর্থন করে না
                      </strong>
                    </noscript>
                  </div>
                  <button class="Button-sc-34e3rb-0 gxhoXU StyledPlayButton-sc-11nyhtu-1 bBTuxK">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      Play video, "Test asset with square image", Duration 0,16
                    </span>
                    <div aria-hidden="true"
                         class="IconWrapper-sc-34e3rb-1 jGavfg"
                    >
                      <svg viewbox="0 0 32 32"
                           width="12px"
                           height="12px"
                           focusable="false"
                           aria-hidden="true"
                           class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
                      >
                        <polygon points="3,32 29,16 3,0">
                        </polygon>
                      </svg>
                    </div>
                    <time datetime="PT16S"
                          aria-hidden="true"
                          class="TimeDuration-sc-34e3rb-2 cZLyLe"
                    >
                      00:16
                    </time>
                  </button>
                  <img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p019qd93.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p019qd93.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p019qd93.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p019qd93.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p019qd93.jpg 800w"
                       alt
                       src="https://ichef.test.bbci.co.uk/images/ic/512xn/p019qd93.jpg"
                       class="StyledImg-sc-7vx2mr-0 hIxkbt"
                  >
                </div>
              </div>
              <figcaption class="Caption-sc-16x70so-0 jClRdi">
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  ভিডিওর ক্যাপশান,
                </span>
                <p>
                  এটি একটি ভিডিওযুক্ত একটি ভিডিও ব্লক
                </p>
              </figcaption>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <h2 id="-এটি-একটি-সাবহেডলাইন-ব্লক"
                tabindex="-1"
                class="SubHeading-sc-1kh1qhu-1 gnHsFb"
            >
              এটি একটি সাবহেডলাইন ব্লক
            </h2>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <div class="lazyload-placeholder">
                    </div>
                    <noscript>
                      <img srcset="https://ichef.bbci.co.uk/news/240/cpsdevpb/baed/test/3c2cf780-fcb9-11e9-9afe-1371928331c5.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsdevpb/baed/test/3c2cf780-fcb9-11e9-9afe-1371928331c5.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsdevpb/baed/test/3c2cf780-fcb9-11e9-9afe-1371928331c5.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsdevpb/baed/test/3c2cf780-fcb9-11e9-9afe-1371928331c5.jpg 624w, https://ichef.bbci.co.uk/news/800/cpsdevpb/baed/test/3c2cf780-fcb9-11e9-9afe-1371928331c5.jpg 800w"
                           alt="
এটি একটি সাবহেডলাইন ব্লক"
                           src="https://ichef.bbci.co.uk/news/640/cpsdevpb/baed/test/3c2cf780-fcb9-11e9-9afe-1371928331c5.jpg"
                           width="800"
                           class="StyledImg-sc-7vx2mr-0 dQLeqZ"
                      >
                    </noscript>
                    <p role="text"
                       class="Copyright-sc-11lgtw-0 hDvIfz"
                    >
                      <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                        ছবির উৎস,
                      </span>
                      <span lang="en-GB">
                        Getty Images
                      </span>
                    </p>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                </div>
              </div>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 RXHgt">
              এই পরীক্ষার নিবন্ধটি তৈরি করা হয়েছে যাতে আমরা আমাদের ওয়েবসাইটে পরীক্ষা চালাতে পারি।
            </p>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/bengali"
               class="StyledLink-m3awbo-2 hxhVJi"
            >
              <svg height="24"
                   viewbox="0 0 227.94 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 fCwdWu"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M196.8 4.94h-1v1.47a7.51 7.51 0 0 0 .07 1.07 2.46 2.46 0 0 0-.8-.91 1.81 1.81 0 0 0-.93-.32H182v1.4h8.55v.65a32.69 32.69 0 0 0-3.73 1.45 42.48 42.48 0 0 0-3.9 2l.77 1.89a9.79 9.79 0 0 1 4.07 1.66 8.78 8.78 0 0 1 2.79 3.12H192V7.64h1.83a1.67 1.67 0 0 1 1.13.42 2.77 2.77 0 0 1 .76 1.19v9.22h1.51V7.64h2.06v-1.4h-2.08zm-8.61 9a10.89 10.89 0 0 0-3.47-1.47 28.21 28.21 0 0 1 2.74-1.43q1.45-.66 3.06-1.22v4.91q0 .8.07 1.59a7.45 7.45 0 0 0-2.4-2.32zM203.63 11.6a2.72 2.72 0 0 0 2-.77 2.57 2.57 0 0 0 .79-1.92 2.54 2.54 0 0 0-.8-1.91 2.92 2.92 0 0 0-3.95 0 2.57 2.57 0 0 0-.79 1.91 2.57 2.57 0 0 0 .79 1.92 2.72 2.72 0 0 0 1.96.77zm-1-3.7a1.42 1.42 0 0 1 2.44 1 1.36 1.36 0 0 1-.41 1 1.49 1.49 0 0 1-2 0 1.47 1.47 0 0 1 0-2zM201.74 12.29l-1 1.28a15.62 15.62 0 0 1 3 2.28 21.5 21.5 0 0 1 2.67 3.43l1.29-.65A18.94 18.94 0 0 0 205 15a15.76 15.76 0 0 0-3.26-2.71zM225.86 6.24l-.44-1.3h-1v1.47a7.51 7.51 0 0 0 .07 1.07 2.46 2.46 0 0 0-.8-.91 1.81 1.81 0 0 0-.93-.32h-14.83v1.4h11.21v2.84a4.24 4.24 0 0 0-1.11-.7 2.9 2.9 0 0 0-1-.18 2.17 2.17 0 0 0-1.08.28 1.81 1.81 0 0 0-.75.78 3.85 3.85 0 0 0-1.31-1 3.93 3.93 0 0 0-1.67-.33 3.29 3.29 0 0 0-2.27.81 2.63 2.63 0 0 0-.91 2.06 3.44 3.44 0 0 0 .84 2.3 5.2 5.2 0 0 0 2.46 1.5l.53-1.45a4.35 4.35 0 0 1-1.67-1 1.82 1.82 0 0 1-.56-1.32 1.42 1.42 0 0 1 .47-1.1 1.74 1.74 0 0 1 1.22-.43 2.17 2.17 0 0 1 1.59.68 3 3 0 0 1 .81 1.83l1.28-.09a5 5 0 0 1 0-.71 1.56 1.56 0 0 1 .33-1.07 1.25 1.25 0 0 1 1-.37 1.67 1.67 0 0 1 .94.29 4 4 0 0 1 .94 1v6.22h1.51V7.64h1.83a1.67 1.67 0 0 1 1.13.42 2.77 2.77 0 0 1 .76 1.19v9.22h1.51V7.64h2.06v-1.4z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                বাংলা
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 idqvVi">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 gRKcvt"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/bengali/institutional-50409861"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    বিবিসির ওপর কেন আপনি আস্থা রাখতে পারেন
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/bengali/institutional-37289190"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    ব্যবহারের শর্তাবলী
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/bengali/institutional-37289764"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    বিবিসি সম্পর্কে
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/bengali/institutional-37289766"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    প্রিভেসি নীতি
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/bengali/institutional-37289967"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    কুকিজ
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/contact/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    বিবিসির সঙ্গে যোগাযোগ করুন
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 বিবিসি। বাইরের কোন সাইটের তথ্যের জন্য বিবিসি দায়বদ্ধ নয়।
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  বাইরের লিংক সম্পর্কে বিবিসির দৃষ্টিভঙ্গি সম্বন্ধে পড়ুন।
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
    <script>
      window.SIMORGH_DATA={"status":200,"pageData":{"metadata":{"id":"mock-id","locators":{"optimoUrn":"urn:bbc:optimo:asset:c6p3yp5zzmeo"},"type":"article","createdBy":"Bengali","language":"bn","lastUpdated":1572879816559,"firstPublished":1562942411695,"lastPublished":1562942411695,"options":{},"analyticsLabels":{},"passport":{"language":"bn","home":"http://www.bbc.co.uk/ontologies/passport/home/Bengali"},"tags":{},"version":"v1.1.2","blockTypes":["headline","text","paragraph","fragment","image","caption","altText","rawImage","urlLink","video","subheadline"]},"content":{"model":{"blocks":[{"type":"headline","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"এটি এই পরীক্ষার নিবন্ধটির শিরোনাম","blocks":[{"type":"fragment","model":{"text":"এটি এই পরীক্ষার নিবন্ধটির শিরোনাম","attributes":[]},"id":"mock-id","position":[1,1,1,1]}]},"id":"mock-id","position":[1,1,1]}]},"id":"mock-id","position":[1,1]}]},"id":"mock-id","position":[1]},{"type":"image","model":{"blocks":[{"type":"caption","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"এই পরীক্ষার চিত্র, কপিরাইট বিবিসি, ফ্রান্সের মানচিত্র দেখায়। চিত্রটি প্রথম তিনটি ব্লকের মধ্যে রয়েছে এবং এতে ক্যাপশন রয়েছে।\\n","blocks":[{"type":"fragment","model":{"text":"এই পরীক্ষার চিত্র, কপিরাইট বিবিসি, ফ্রান্সের মানচিত্র দেখায়। চিত্রটি প্রথম তিনটি ব্লকের মধ্যে রয়েছে এবং এতে ক্যাপশন রয়েছে।\\n","attributes":[]},"id":"mock-id","position":[2,1,1,1,1]}]},"id":"mock-id","position":[2,1,1,1]}]},"id":"mock-id","position":[2,1,1]}]},"id":"mock-id","position":[2,1]},{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"এই পরীক্ষার চিত্র, কপিরাইট বিবিসি, ফ্রান্সের মানচিত্র দেখায়। চিত্রটি প্রথম তিনটি ব্লকের মধ্যে রয়েছে এবং এতে ক্যাপশন রয়েছে।","blocks":[{"type":"fragment","model":{"text":"এই পরীক্ষার চিত্র, কপিরাইট বিবিসি, ফ্রান্সের মানচিত্র দেখায়। চিত্রটি প্রথম তিনটি ব্লকের মধ্যে রয়েছে এবং এতে ক্যাপশন রয়েছে।","attributes":[]},"id":"mock-id","position":[2,2,1,1,1]}]},"id":"mock-id","position":[2,2,1,1]}]},"id":"mock-id","position":[2,2,1]}]},"id":"mock-id","position":[2,2]},{"type":"rawImage","model":{"width":624,"height":351,"locator":"b06e/test/d8141e90-fcb8-11e9-9afe-1371928331c5.jpg","originCode":"cpsdevpb","copyrightHolder":"BBC"},"id":"mock-id","position":[2,3]}]},"id":"mock-id","position":[2]},{"type":"timestamp","model":{"firstPublished":1562942411695,"lastPublished":1562942411695},"id":"mock-id","position":[3]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"এটি একটি পাঠ্য ব্লক, এতে বিবিসি আবহাওয়ার হোমপেজে একটি ইউআরএল লিঙ্ক রয়েছে।","blocks":[{"type":"fragment","model":{"text":"এটি একটি পাঠ্য ব্লক, এতে বিবিসি আবহাওয়ার হোমপেজে একটি ইউআরএল ","attributes":[]},"id":"mock-id","position":[4,1,1]},{"type":"urlLink","model":{"text":"লিঙ্ক রয়েছে।","blocks":[{"type":"fragment","model":{"text":"লিঙ্ক রয়েছে।","attributes":[]},"id":"mock-id","position":[4,1,2,1]}],"locator":"https://www.bbc.co.uk/weather","isExternal":false},"id":"mock-id","position":[4,1,2]}]},"id":"mock-id","position":[4,1]}]},"id":"mock-id","position":[4]},{"type":"video","model":{"locator":"urn:bbc:pips:pid:p019qd7g","blocks":[{"type":"caption","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"এটি একটি ভিডিওযুক্ত একটি ভিডিও ব্লক","blocks":[{"type":"fragment","model":{"text":"এটি একটি ভিডিওযুক্ত একটি ভিডিও ব্লক","attributes":[]},"id":"mock-id","position":[5,1,1,1,1]}]},"id":"mock-id","position":[5,1,1,1]}]},"id":"mock-id","position":[5,1,1]}]},"id":"mock-id","position":[5,1]},{"type":"aresMedia","model":{"blocks":[{"blockId":"urn:bbc:ares::clip:p019qd7g","type":"aresMediaMetadata","model":{"id":"mock-id","subType":"clip","format":"audio_video","title":"Test asset with square image","synopses":{"short":"test asset"},"imageUrl":"ichef.test.bbci.co.uk/images/ic/$recipe/p019qd93.jpg","embedding":false,"advertising":true,"versions":[{"versionId":"p019qd7k","types":["Original"],"duration":16,"durationISO8601":"PT16S","warnings":{},"availableTerritories":{"uk":true,"nonUk":true},"availableFrom":1493293493000}],"syndication":{"destinations":[]}},"id":"mock-id","position":[5,2,1]},{"type":"image","model":{"blocks":[{"type":"rawImage","model":{"height":900,"width":900,"copyrightHolder":"Sony","locator":"ichef.test.bbci.co.uk/images/ic/$widthxn/p019qd93.jpg","originCode":"mpv"},"id":"mock-id","position":[5,2,2,1]}]},"id":"mock-id","position":[5,2,2]}]},"id":"mock-id","position":[5,2]}]},"id":"mock-id","position":[5]},{"type":"subheadline","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"\\rএটি একটি সাবহেডলাইন ব্লক","blocks":[{"type":"fragment","model":{"text":"\\rএটি একটি সাবহেডলাইন ব্লক","attributes":[]},"id":"mock-id","position":[6,1,1,1]}]},"id":"mock-id","position":[6,1,1]}]},"id":"mock-id","position":[6,1]}]},"id":"mock-id","position":[6]},{"type":"image","model":{"blocks":[{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"\\rএটি একটি সাবহেডলাইন ব্লক","blocks":[{"type":"fragment","model":{"text":"\\rএটি একটি সাবহেডলাইন ব্লক","attributes":[]},"id":"mock-id","position":[7,1,1,1,1]}]},"id":"mock-id","position":[7,1,1,1]}]},"id":"mock-id","position":[7,1,1]}]},"id":"mock-id","position":[7,1]},{"type":"rawImage","model":{"width":800,"height":450,"locator":"baed/test/3c2cf780-fcb9-11e9-9afe-1371928331c5.jpg","originCode":"cpsdevpb","copyrightHolder":"Getty Images"},"id":"mock-id","position":[7,2]}]},"id":"mock-id","position":[7]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"এই পরীক্ষার নিবন্ধটি তৈরি করা হয়েছে যাতে আমরা আমাদের ওয়েবসাইটে পরীক্ষা চালাতে পারি।","blocks":[{"type":"fragment","model":{"text":"এই পরীক্ষার নিবন্ধটি তৈরি করা হয়েছে যাতে আমরা আমাদের ওয়েবসাইটে পরীক্ষা চালাতে পারি।","attributes":[]},"id":"mock-id","position":[8,1,1]}]},"id":"mock-id","position":[8,1]}]},"id":"mock-id","position":[8]}]}},"promo":{"headlines":{"seoHeadline":"ক্রিকেট বিশ্বকাপ ২০১৯: ম্যান অফ দা টুর্নামেন্টের দৌড়ে এগিয়ে কারা?"},"locators":{"optimoUrn":"urn:bbc:optimo:asset:c6p3yp5zzmeo"},"summary":"","timestamp":1562942411695,"id":"mock-id","type":"cps"},"relatedContent":{"site":{"subType":"site","name":"Bengali","uri":"/bengali","type":"simple"},"groups":[]}},"path":"/bengali/articles/c6p3yp5zzmeo","timeOnServer": "mock-time"}
    </script>
    <div>
      <!--[if !IE]><!-->
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="text/javascript"
            crossorigin="anonymous"
            defer
    >
      [6]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-253ae210.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-0f485567.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-1f20a385.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-678f84af.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-10e2e882.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-d0ae3f07.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-f71cff67.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="bengali"
            src="http://localhost:7080/static/js/bengali-31ecd969.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <div>
    </div>
    <script type="text/javascript">
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;
